# rust-http-server

./: Cargo.toml
src/: main.rs
src/http_server/: mod.rs  request.rs  response.rs  server.rs
